--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -31,12 +31,12 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
-  "text-level-5": "人?",
-  "time-over": "倒计时多了",
+  "text-level-1": "再来一次？",
+  "text-level-2": "还行",
+  "text-level-3": "可以呦",
+  "text-level-4": "厉害",
+  "text-level-5": "NB",
+  "time-over": "时间到",
   "rank-title": "刘刘大作战-排行榜",
   "query-record": "查询记录",
   "day-rank": "排行榜[日]",
